30/10/2009:
	- Security fixes to Task.cc to make sure while loop is limited to the
	  expected number of arguments. (Thanks to Willem Hengeveld for pointing
	  this out).
	

19/08/2009:
	- Minor updates to IIPImage.h and IIPImage.cc. FIF.cc also now tests
	  for upper/lowercase .tif and .tiff suffixes.


14/08/2009:
	- Modification to View.cc and CVT.cc to calculate the appropriate
	  resolution as the smallest resolution with a dimension greater size
	  than the requested dimensions. The WID and HEI directives now
	  effectively give bounding dimensions.

11/08/2009:
	- Added simple nearest neighbour resampling to CVT command to allow it to
	  resize to the exact dimensions and not just the nearest available pyramid
	  resolution.
	- CVT Content-disposition tag now gives the image filename allowing the user
	  to save the image directly with this.


01/07/2009:
	- Added quality layer parameter to images for future use with file formats
	  such as JPEG2000 that support this. This allows the decoding of several
	  quality layers via the LYR command. Modifications to the RawTile API
	  as well as IIPImage::getTile resulting in a series of changes to
	  CVT.cc, JTL.CC, TIL.cc, TPTImage.cc, View.h, Main.cc and Environment.h.
	  New startup configuration "LAYERS" to set the default number of layers.
	  Default is 1 otherwise.


22/06/2009:
	- Changes to Zoomify.cc to take into account the fact that Zoomify expects
	  a fixed number of resolution levels.


15/04/2009:
	- Added a flag for padded tiles into RawTile.h. TIFF's are padded out
	  to the tile size, but other formats may not be. Changes to TPTImage,
	  TileManager and CVT to handle this.
	- Also changed the RawTile flag for memory managed tiles.


18/03/2009:
	- Added modification timestamps to the IIPImage and Rawtile classes.
	  The TileManager now checks whether the tile is fresh and reloads it
	  if necessary.


11/03/2009:
	- Several changes to JTL.cc and Cache.h to eliminate a memory leak. Also